--- a/scss/blocks/_clients.scss
+++ b/scss/blocks/_clients.scss
@@ -8,24 +8,18 @@
         padding-bottom: 50px;
     }
     &__content-text h2 {
-        font-weight: 700;
-        font-size: 34px;
-        line-height: 57px;
+        @include Font($fw:700, $fs:34px, $lh:57px, $ls:0px);
         padding-bottom: 8px;
         color: $color-text-gray;
     }
     &__content-text p {
         max-width: 649px;
         margin: 0 auto;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 28px;
-        letter-spacing: 02px;
+        @include Font($fw:500, $fs:16px, $lh:28px, $ls:0.2px);
         color: $color-text-gray;
     }
     &__content-list ul {
-        display: flex;
-        justify-content: space-between;
+        @include Display ($justify:space-between, $items:start);
         gap: 64px;
     }
     &__content-list ul li {
@@ -39,8 +33,7 @@
         margin-bottom: 16px;
     }
     &__content-list ul li p {
-        font-size: 16px;
-        line-height: 28px;
+        @include Font($fw:400, $fs:16px, $lh:28px, $ls:0px);
         padding-bottom: 16px;
         color: $color-text-light;
     }
