--- a/scss/blocks/_collaborative.scss
+++ b/scss/blocks/_collaborative.scss
@@ -1,6 +1,5 @@
 .collaborative {
-  display: flex;
-  justify-content: space-between;
+  @include Display ($justify:space-between, $items:start);
   padding-bottom: 150px;
 
   &__content {
@@ -15,15 +14,13 @@
   }
 
   &__content h2 {
-    font-weight: 700;
-    font-size: 32px;
+    @include Font($fw:700, $fs:32px, $lh:100%, $ls:0px);
     color: $color-text-gray;
     padding-bottom: 23px;
   }
 
   &__content p {
-    font-size: 16px;
-    line-height: 26px;
+    @include Font($fw:400, $fs:16px, $lh:26px, $ls:0px);
     color: $color-text-gray;
     padding-bottom: 30px;
   }
