--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,14 +1,11 @@
 .header {
   height: 80px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  @include Display ($justify:space-between, $items:center);
   padding-top: 19px;
 
   &__logo {
-    display: flex;
+    @include Display ($justify:start, $items:center);
     gap: 16px;
-    align-items: center;
   }
 
   &__logo-title {
@@ -24,22 +21,18 @@
   }
 
   &__nav-list {
-    display: flex;
+    @include Display ($justify:start, $items:center);
     gap: 24px;
-    align-items: center;
   }
 
   &__nav-list a {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 28px;
+    @include Font($fw:500, $fs:16px, $lh:28px, $ls:0px);
     color: $color-text-gray;
   }
     
     &__nav-list a:hover {
         cursor: pointer;
-        font-weight: 600;
-        font-size: 20px;
+        @include Font($fw:600, $fs:20px, $lh:100%, $ls:0px);
         color: $color-button-color;
     }
 
@@ -49,8 +42,7 @@
     background: transparent;
     border-radius: 4px;
     border: 1px solid $color-btn-border;
-    font-weight: 600;
-    font-size: 16px;
+    @include Font($fw:600, $fs:16px, $lh:100%, $ls:0px);
     transition: all 0.3s;
   }
 
@@ -68,8 +60,7 @@
     background: transparent;
     border-radius: 4px;
     border: 1px solid $color-btn-border;
-    font-weight: 600;
-    font-size: 16px;
+    @include Font($fw:600, $fs:16px, $lh:100%, $ls:0px);
     transition: all 0.3s;
   }
   &__btn-up:hover {
@@ -83,8 +74,7 @@
   &__btn-mode {
     background: transparent;
     border: none;
-    font-weight: 600;
-    font-size: 16px;
+    @include Font($fw:600, $fs:16px, $lh:100%, $ls:0px);
     transition: all 0.3s;
   }
   &__btn-mode:hover {
