--- a/scss/blocks/_quick.scss
+++ b/scss/blocks/_quick.scss
@@ -10,8 +10,7 @@
     text-align: center;
   }
   &__content-text h2 {
-    font-weight: 700;
-    font-size: 32px;
+    @include Font($fw:700, $fs:32px, $lh:100%, $ls:0px);
     color: $color-text-gray;
     margin-bottom: 16px;
   }
@@ -26,9 +25,7 @@
   }
 
   &__content-list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include Display ($justify:space-between, $items:center);
     margin-top: 32px;
   }
 
@@ -39,22 +36,19 @@
   }
 
   &__content-list-item div {
-    display: flex;
-    align-items: center;
+    @include Display ($justify:start, $items:center);
     gap: 16px;
   }
 
   &__content-list-item div p {
-    font-weight: 500;
-    font-size: 16px;
+    @include Font($fw:500, $fs:16px, $lh:100%, $ls:0px);
     color: $color-text-gray;
     padding: 20px 25px;
     border-radius: 26.5px;
     box-shadow: 0px 2px 8px 0px #5675921a;
   }
   &__content-btn {
-    display: flex;
-    justify-content: center;
+    @include Display ($justify:center, $items:start);
     padding-top: 48px;
     padding-bottom: 150px;
   }
@@ -67,8 +61,7 @@
     border: none;
     background: $color-button-color;
     color: $color-white;
-    font-weight: 600;
-    font-size: 16px;
+    @include Font($fw:600, $fs:16px, $lh:100%, $ls:0px);
     transition: all 0.3s;
   }
 
