--- a/css/main.css
+++ b/css/main.css
@@ -132,13 +132,34 @@
   letter-spacing: 0px;
   transition: all 0.3s;
 }
+.header__btn-menu {
+  display: none;
+  background: transparent;
+  border: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0px;
+}
 .header__btn-mode:hover {
   cursor: pointer;
   color: #02897A;
 }
+@media (max-width: 900px) {
+  .header .header__nav-list {
+    display: none;
+  }
+}
+@media (max-width: 510px) {
+  .header .header__btn-in, .header .header__btn-up, .header .header__btn-mode {
+    display: none;
+  }
+  .header .header__btn-menu {
+    display: block;
+  }
+}
 
 .top {
-  height: 556px;
   padding-top: 25px;
   display: flex;
 }
@@ -201,7 +222,34 @@
   display: flex;
   gap: 9px;
 }
+.top__image-img {
+  display: block;
+}
 
+.media-top {
+  display: none;
+}
+
+@media (max-width: 1070px) {
+  .top {
+    flex-direction: column-reverse;
+  }
+  .top__image {
+    margin: 0 auto;
+  }
+  .top__title {
+    text-align: center;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 510px) {
+  .media-top {
+    display: block;
+  }
+  .top__image-img {
+    display: none;
+  }
+}
 .product-section {
   background-image: url(../../images/bg-product-section.png);
   background-repeat: no-repeat;
